<resources>
    <string name="app_name">NJU Tube</string>
    <string name="usernameInputHint">用户名</string>
    <string name="SignInInfo">登陆到\n NJU TUBE</string>
    <string name="loginBtn_text">登陆</string>
    <string name="doNotLoginWithBelowMsg">NJU Tube不支持以下几种登陆方式</string>
    <string name="passwordInputHint">密码</string>

    <string name="server_url">http://192.168.3.99:8080</string>
    <string name="feed_url">/tube/feed/</string>
    <string name="login_url">/tube/user/login/</string>
    <string name="register_url">/tube/user/register/</string>
    <string name="upload_url">/tube/publish/action/</string>
    <string name="comment_list">/tube/comment/list/</string>
    <string name="comment_action">/tube/comment/action/</string>
    <string name="like_action">/tube/favorite/action/</string>
    <string name="my_uploads">/tube/publish/list/</string>
    <string name="my_favorite">/tube/favorite/list/</string>

    <string name="nju_tube_register_title">注册 NJU Tube 账号</string>
    <string name="sign_up_btn_text">注册</string>
    <string name="confirm_password_hint">确认密码</string>
    <string name="forgot_message">忘记用户名或密码？</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment_text">Home Fragment</string>
    <string name="explore_fragment_text">Explore Fragment</string>
    <string name="favorites_fragment_text">Favorites Fragment</string>
    <string name="subscription_fragment_text">Subscription Fragment</string>
    <string name="publish_fragment_text">Publish Fragment</string>
    <string name="history_text">历史记录</string>
    <string name="recent_text">最近观看</string>

    <string name="success_login">你好</string>
    <string name="fail_login">登录失败</string>
    <string name="forget_toast">我们由衷地感到遗憾</string>
    <string name="default_title">Polar Bears</string>
    <string name="default_date">2023年13月32日</string>
    <string name="default_author">CloudCreator</string>
    <string name="comment_hint">评论(0条)</string>
    <string name="appbar_title">NJU Tube</string>
    <string name="register_text">注册新用户</string>
    <string name="home_item">主页</string>
    <string name="explore_item">探索</string>
    <string name="publish_item">发布</string>
    <string name="about">关于</string>
    <string name="like_item">收藏</string>
    <string name="notification">Notification</string>
    <string name="account">Account</string>
    <string name="signup_passwd_not_match">密码与确认密码不匹配，请检查后重试</string>
    <string name="network_hint">网络似乎出现了问题</string>
    <string name="register_success">注册成功，正在跳转到主页</string>
    <string name="user_exists">用户名已存在，请直接登录或换一个用户名</string>
    <string name="register_token_fail">注册成功，但服务器生成Token时出现了错误，请再次登录</string>
    <string name="upload_fail">上传失败</string>
    <string name="upload_success">上传成功</string>
    <string name="something_wrong">出现了一些问题…</string>
    <string name="make_title_hint">给你的视频取个标题吧~</string>
    <string name="take_it">就这个</string>
    <string name="no_blank">标题不能为空~</string>
    <string name="cancel_upload_btn">算了</string>
    <string name="cancel_upload_toast">取消上传</string>
    <string name="cancel_select_hint">请选择要上传的视频</string>
    <string name="cannot_get_comment">评论加载失败</string>
    <string name="new_comment">new_comment</string>
    <string name="like">like</string>
    <string name="comment_title">写点什么</string>
    <string name="comment_sure">发送</string>
    <string name="comment_cancel">算了</string>
    <string name="no_blank_comment">评论不能为空~</string>
    <string name="comment_fail">评论失败</string>
    <string name="comment_success">评论成功</string>
    <string name="my_videos">我发布的视频</string>
    <string name="server_dialog_title">自定义服务器地址</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="server_no_blank">服务器地址不能为空</string>
    <string name="github_repo">https://github.com/Relate13/web_2023</string>
    <string name="commenter">CloudCreator:</string>
    <string name="comment">你所热爱的，就是你的生活😄</string>
    <string name="current_user_hint">当前登录为</string>
    <string name="about_title">本程序由</string>
    <string name="cloud_creator">Cloud-Creator</string>
    <string name="relate13">Relate13</string>
    <string name="about_text">共同开发</string>
</resources>