<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/video_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="2dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cover_card"
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:layout_margin="5dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/thumbnail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/china" />
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/video_title_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:gravity="top"
        android:padding="10dp"

        android:text="@string/default_title"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/uploader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cover_card"
        app:layout_constraintTop_toTopOf="@+id/cover_card" />

    <TextView
        android:id="@+id/uploader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_author"
        android:textColor="@android:color/darker_gray"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/cover_card"
        app:layout_constraintEnd_toStartOf="@id/time_stamp"
        app:layout_constraintStart_toEndOf="@+id/cover_card"
        app:layout_constraintTop_toBottomOf="@id/video_title_text" />

    <TextView
        android:id="@+id/time_stamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_date"
        android:textColor="@android:color/darker_gray"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/uploader"
        app:layout_constraintEnd_toEndOf="@+id/video_title_text"
        app:layout_constraintStart_toEndOf="@+id/uploader"
        app:layout_constraintTop_toTopOf="@+id/uploader" />

</androidx.constraintlayout.widget.ConstraintLayout>